--- a/src/main/resources/templates/Instructions.html
+++ b/src/main/resources/templates/Instructions.html
@@ -23,8 +23,29 @@
 			<tr class="font1"><td>
 				<h>欢迎使用【汽车检测线远程智能故障诊断系统】</h>
 			</td></tr>
-			<tr class="font3"><td>
+			<tr ><td>
 				使用说明：
+			</td></tr>
+			<tr ><td>
+				1.点击“诊断数据上传”菜单，填写“故障描述”后选择诊断数据文件。单击“上传”按钮。即可获取诊断结论。
+			</td></tr>
+			<tr ><td>
+				2.填写“故障描述”后选择诊断数据文件。单击“上传”按钮。即可获取诊断结论。
+			</td></tr>
+			<tr ><td>
+				3.单击“上传”按钮，即可获取诊断结论。
+			</td></tr>
+			<tr class="font3"><td>
+				====================================================================================================================================
+			</td></tr>
+			<tr ><td>
+				* 点击“用户信息”菜单可以查看用户名，电话，地址信息。如需更改请在对应文本框内填入更新的内容。单击“修改”按钮提交。
+			</td></tr>
+			<tr ><td>
+				* 联系人：***  &nbsp;&nbsp;&nbsp; 联系电话：***********
+			</td></tr>
+			<tr class="font3"><td>
+				====================================================================================================================================
 			</td></tr>
 		</table>
 		<div style="height:10px;"></div>
