--- a/src/main/resources/templates/Login.html
+++ b/src/main/resources/templates/Login.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title></title>
+<title>汽车检测线远程智能故障诊断系统</title>
 <link href="/css/style2.css" rel="stylesheet" type="text/css" />
   <!--   引入jQuery -->
   <script type="text/javascript" src="js/jquery-1.11.0.js"></script>
