--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -45,7 +45,17 @@
 			</tr>
 			<tr valign="top">
 				<td class="left_nav_bgshw" height="50">
+					<p class="left_nav_link"><img src="images/left_nav_arrow.gif">&nbsp;&nbsp;<a href="/user" target="main">用户信息</a></img></p>
+				</td>
+			</tr>
+			<tr valign="top">
+				<td class="left_nav_bgshw" height="50">
 					<p class="left_nav_link"><img src="images/left_nav_arrow.gif">&nbsp;&nbsp;<a href="/upload" target="main">诊断数据上传</a></img></p>
+				</td>
+			</tr>
+			<tr valign="top">
+				<td class="left_nav_bgshw" height="50">
+					<p class="left_nav_link"><img src="images/left_nav_arrow.gif">&nbsp;&nbsp;<a href="/history" target="main">查询诊断历史记录</a></img></p>
 				</td>
 			</tr>
 		</table>
