--- a/src/main/resources/templates/reg_res.html
+++ b/src/main/resources/templates/reg_res.html
@@ -5,7 +5,7 @@
     <title>汽车检测线远程智能故障诊断系统</title>
 </head>
 <body>
-    <h1>注册成功，欢迎$!{username}</h1>
+    <h1>注册成功，欢迎【$!{username}】</h1>
     <a href="/main">跳转到主页</a>
 </body>
 </html>
